Fixed the text-image overlay on my 3 columns in flexbox and also changes to my nav-links which were affected by z-index of -1 and so not detected on hover. Only the last nav-link is yet to be fixed.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,19 +6,14 @@
     background-attachment: scroll;
     height: 600px;
     width: 100%;
-    z-index: -1;
     position: relative;
 }
 
 body {
-    height: 5000px;
-    width: 100%;
+    height:100vh;
+    width: 100vw;
     margin: 0;
     position: relative;
-}
-
-.styling {
-    color: yellowgreen;
 }
 
 .bg-text {
@@ -32,7 +27,7 @@ body {
     width: 100%;
 }
 h1 {
-    letter-spacing: 3px;
+    letter-spacing: 4px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     margin-bottom: 20px;
@@ -52,7 +47,9 @@ h1 {
 
 .btn-primary:hover {
     background-color: green;
+    border-color: green;
 }
+
 
 .btn-light {
     color: #222;
@@ -67,7 +64,7 @@ h1 {
 .navbar {
     min-height: 50px;
     margin-bottom: 20px;
-    z-index: 3;
+    z-index: 1030;
     position: fixed;
     top: 0;
     width: 100%;
@@ -135,6 +132,32 @@ h2.section-heading {
 
 }
 
+h2 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 2px;
+}
+
+.item {
+    cursor: pointer;
+}
+
+.item a:hover {
+    .card-img {
+        width: 110%;
+        border: 4px solid transparent;
+    }
+    h2 {
+        text-shadow: 2px 2px 4px #000000 ;
+        transition: all 1s;
+    }
+    .card-img {
+        width: 110%;
+        border: 5px solid transparent;
+        box-shadow: 0px 0px 40px black;
+        transition: all 1s;
+    }
+}
+
 .pushpin {
     color: yellowgreen;
     font-size: 40px;
@@ -145,16 +168,6 @@ h2.section-heading {
 }
 footer {
     background-color: yellowgreen;
-}
-
-.bg-image1 {
-    background-image: url('images/writing2.jpg');
-}
-.bg-image2 {
-    background-image: url('images/concert.jpg');
-}
-.bg-images3 {
-    background-image: url('images/pencil-sharpening.jpg');
 }
 
 
